# effective-llm-applications

./: Bookbinder.sln  README.md  SOURCES.md  effective-llm-applications.sln  pyproject.toml
.github/: FUNDING.yml
apps/frontend/: package.json  (+2 more)
bites/: chapter-01.md  chapter-05.md  chapter-06.md  chapter-07.md  chapter-08.md  chapter-09.md
book/: outline.md
cover/: KDP - Cover.indd  center-piece.ai  cover-art.ai
database/: 00-create-db.sql
diagrams/: agent-reinforcement-learning.drawio  auto-corrective-steps-pattern.drawio  content-generation-workflow.drawio  context-window-curve.drawio  cosine-similarity.drawio  end-to-end-rag-pipeline.drawio  function-calling-loop.drawio  function-filter-architecture.drawio  llmops.drawio  rag-evaluation-controls.drawio  rag-pattern-architecture.drawio  retrieval-architecture.drawio  semantic-kernel-architecture.drawio  top-p-sampling.drawio
host/: Bookbinder.AppHost.csproj  Program.cs
input/: outline.md  theme-settings.txt
manuscript/: 00-preface.docx  00-preface.md  01-understanding-large-language-models.md  02-essential-llmops-knowledge.md  03-getting-started-with-semantic-kernel.md  04-the-art-and-non-sense-of-prompt-engineering.md  04-the-art-and-nonsense-of-prompt-engineering.md  05-testing-and-monitoring-prompts.md  06-enhancing-llms-with-tools.md  07-retrieval-augmented-generation.md  08-working-with-structured-output.md  09-prompt-chaining-workflows.md  10-intelligent-request-routing-workflows.md  11-working-with-agents.md  book.txt
notebooks/: README.md  visualize-top-p.ipynb
scripts/: unwrap.py
(+348 files in other folders)
