[project]
name = "bookbinder"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Willem Meints", email = "1550763+wmeints@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "phidata>=2.7.5",
    "promptarchitect",
    "typer>=0.15.1",
]

[project.scripts]
bookbinder = "bookbinder.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
promptarchitect = { git = "ssh://git@github.com/joopsnijder/promptarchitect" }
